# bevy-2d-sauce

./: Cargo.lock.template  Cargo.toml  Cargo.toml.template  README.md  README.md.template  cargo-generate.toml  post-generate.rhai
.cargo/: config_ci.toml
.github/workflows/: ci.yaml  release.yaml  release.yaml.template
docs/: design.md  known-issues.md  tooling.md  workflows.md
src/: audio.rs  audio.rs.template  lib.rs  lib.rs.template  main.rs  main.rs.template
src/demo/: animation.rs  level.rs  mod.rs  movement.rs  player.rs
src/menus/: settings.rs
src/screens/: credits.rs  gameplay.rs  loading.rs  mod.rs  settings.rs  splash.rs  title.rs
src/theme/: interaction.rs  palette.rs  widget.rs  widgets.rs
